<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_rectangle"
    android:layout_margin="5dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <dk.dtu.imm.experiencesampling.custom.PlaceSelector
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_q_place_selector"
        custom:title="@string/location_q_previous_text"
        custom:description="@string/location_q_previous_text_description" />


    <dk.dtu.imm.experiencesampling.custom.DateTimeFromToSelector
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/location_q_date_time_from_to_selector"
        custom:titleText1="@string/location_q_from"
        custom:titleText2="@string/location_q_to"/>

    <!-- Submit section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_submit"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@drawable/greenbutton_btn_default_holo_light"
            android:id="@+id/location_q_btn_submit" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_not_now"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:id="@+id/location_q_btn_no_thanks" />
    </LinearLayout>

</LinearLayout>